--- a/src/components/bpmn-actions/bpmn-actions.css
+++ b/src/components/bpmn-actions/bpmn-actions.css
@@ -1,11 +1,16 @@
 .bpmn-actions {
   position: absolute;
-  bottom: 5px;
+  top: 0;
   width: 100%;
+  height: 40px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .bpmn-actions button {
-  margin: 0 20px;
+  margin: 0;
 }
 
 .render-icon {
@@ -30,6 +35,7 @@
 
 .el-drawer__body {
   height: 100%;
+  padding: 0 !important;
 }
 
 .CodeMirror {
