--- a/src/index.css
+++ b/src/index.css
@@ -24,18 +24,24 @@ body {
   overflow: hidden;
 }
 
-/* 设置滚动条的样式 */
+/*滚动条整体粗细样式*/
 ::-webkit-scrollbar {
-  width: 4px;
-  background-color: #f1f1f1;
-  border-radius: 0.6px;
-  height: 4px;
+  /*高宽分别对应横竖滚动条的尺寸*/
+  width: 5px;
+  height: 8px;
 }
 
-/* 滚动条滑块 */
+/*滚动条里面小方块*/
 ::-webkit-scrollbar-thumb {
-  width: 4px;
-  height: 60px;
-  background-color: #475156;
-  border-radius: 2px;
+  border-radius: 10px !important;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2) !important;
+  /* 颜色 */
+  /* background:#b6b6b6!important; */
+  /* 线性渐变背景 */
+  background-color: #bebebe;
+}
+
+/*滚动条轨道*/
+::-webkit-scrollbar-track {
+  background-color: transparent !important;
 }
